# relentity

./: .buildinfo  LICENSE  README.md  api.html  example.env  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: multivariant-tests.yml  update-docs.yml
_modules/: index.html
_modules/relentity/ai/: components.html  systems.html
_modules/relentity/core/: components.html  entities.html  entity_ref.html  event_bus.html  events.html  exceptions.html  metaclass.html  registry.html  systems.html
_modules/relentity/spatial/: components.html  events.html  registry.html  systems.html
_modules/relentity/tasks/: components.html  entities.html  systems.html
_sources/: api.rst.txt
docs/source/: api.rst  conf.py  index.rst
examples/ai/: follow_notes.py  scavengers.py
examples/ai/client/: interactive_queries.py  pydantic_response.py  weather_bot.py
examples/ai/follow_notes/: README.md  example.py  party.json  survivors.json  werewolf.json  world.json
examples/ai/inventories/: controllers.py  example.py  party.json  systems.py  tasks.py  trading.json
examples/core/: moving_object.py
examples/rendering/: orbs.py
examples/rendering/terrain/: components.py  main.py  systems.py
examples/spatial/: collision.py
examples/spatial/vision/: example.py
examples/tasks/: read_a_book.py  read_a_book_yourself.py
examples/vision/: example.py  example_1.py
examples/visual/: example.py
relentity/: entities.py  entity.py  event.py  event_bus.py  metaclass.py  metaclasses.py  registry.py  settings.py  systems.py
relentity/ai/: README.md  __init__.py  components.py  events.py  systems.py  utils.py
relentity/ai/pydantic_ollama/: client.py  json.py  responses.py  tools.py
relentity/ai/tests/: test_components.py  test_pydantic_ollama.py  test_systems.py  test_utils.py
relentity/components/: __init__.py  ai_agents.py  base.py  identity.py  position.py  tools.py  velocity.py
relentity/core/: README.md  __init__.py  archetype.py  components.py  entities.py  entity_pool.py  entity_ref.py  event_bus.py  events.py  exceptions.py  metaclass.py  registry.py  system_manager.py  systems.py  transaction.py
relentity/core/tests/: conftest.py  test_components.py  test_entities.py  test_event_bus.py  test_events.py  (+4 more)
relentity/pydantic_ollama/: client.py  exceptions.py  json.py  responses.py  tools.py
relentity/rendering/: components.py  systems.py
relentity/spatial/: README.md  __init__.py  components.py  events.py  registry.py  systems.py  utils.py
relentity/systems/: ai_agents.py  base.py  movement.py
relentity/tasks/: README.md  __init__.py  components.py  entities.py  events.py  systems.py
relentity/visual/: components.py  systems.py
(+17 files in other folders)
