[tool.poetry]
name = "relentity"
version = "0.1.0"
description = ""
authors = ["Tyler Evans <tyler@poorlythoughtout.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
ollama = "^0.4.7"
orjson = "^3.10.15"
pydantic-settings = "^2.8.1"
python-json-logger = "^3.2.1"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
ruff = "^0.9.8"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "-v --cov=relentity --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=80"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "*/test*",
    "*examples*"
]

[tool.coverage.report]
# Include common configurations
fail_under = 80
omit = [
    "tests/*",
    "test_*",
    "conftest.py",
]

show_missing = true
skip_covered = true
